fixes setup_langsmith_dataset.py to conform to LS's new api. Creates dataset and experiments to test research agent tool usage on wikipedia, wolframalpha, web_search, and calculator

--- a/core/agents/nb_research_agent.ipynb
+++ b/core/agents/nb_research_agent.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import importlib\n",
@@ -30,144 +19,138 @@
     "\n",
     "MODEL = \"mistral-nemo\"\n",
     "TEMPERATURE = 0\n",
-    "load_dotenv('../.env', override=True)"
+    "load_dotenv('../.env', override=True)\n",
+    "\n",
+    "from research_agent import create_agent\n",
+    "agent = create_agent(\n",
+    "    model=MODEL,\n",
+    "    builtin_tools=['wikipedia', 'web_search', 'calculator', 'wolframalpha']\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "claim = \"2 raised to the 10th power is 1024.\"\n",
+    "results = agent.invoke({'claim': claim})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tools: ['multiply', 'add', 'divide', 'query']\n"
+      "================================\u001b[1m System Message \u001b[0m================================\n",
+      "\n",
+      "You are an **Evidence Retrieval Agent**. Your role is to retrieve supporting or contradictory evidence for a given claim using the tools available to you.  \n",
+      "\n",
+      "### **Rules:**  \n",
+      "1. **Do Not Evaluate the Claim** – Your task is to retrieve evidence, not to judge the claim's truth.  \n",
+      "2. **Select and Use Tools Strategically** – Based on the claim, think carefully which tools would help, and construct the correct tool calls to retrieve relevant evidence.  \n",
+      "3. **Return Only Tool Messages** – Your output should consist solely of tool calls with properly structured arguments. Do not generate natural language explanations.  \n",
+      "4. **Handle Ambiguity Thoughtfully** – If the claim is unclear, attempt a best-guess search or request clarification through a tool call if applicable.  \n",
+      "5. **Retrieve Evidence from Multiple Perspectives** – If conflicting evidence exists, return both supporting and contradictory sources.  \n",
+      "\n",
+      "### **Behavior:**  \n",
+      "- Use available tools efficiently to retrieve the most relevant information.  \n",
+      "- Use numeric tools such as calculators for numeric claims\n",
+      "- Do not summarize, interpret, or filter the evidence—simply retrieve and present it through tool calls.  \n",
+      "\n",
+      "Your sole function is to query tools and return raw evidence. You do not form conclusions or engage in reasoning about the claim.\n",
+      "\n",
+      "### Examples\n",
+      "Claim: \"The Eiffel Tower is located in Paris.\"\n",
+      "Tool calls: [{\"tool\": \"wikipedia\", \"args\": {\"query\": \"Eiffel Tower\"}}]\n",
+      "\n",
+      "Claim: \"The U.S. GDP increased 3% this year, but this is down from a 3.6% increase last year, representing a 33% decline in growth rate.\"\n",
+      "Tool calls: [\n",
+      "    {\"tool\": \"web_search\", \"args\": {\"query\": \"united states GDP increase this year\"}}, \n",
+      "    {\"tool\": \"calculator\", \"args\": {\"divide\": \"a\": 3, \"b\": 3.6}}\n",
+      "]\n",
+      "\n",
+      "Claim: \"The Great Wall of China is the only human-made structure visible from the Moon.\"\n",
+      "Tool Calls: [\n",
+      "  {\"tool\": \"Wikipedia\", \"query\": \"Great Wall of China visibility from space\"},\n",
+      "  {\"tool\": \"Web Search\", \"query\": \"scientific consensus on structures visible from the Moon\"}\n",
+      "]  \n",
+      "\n",
+      "### User's Claim:\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "2 raised to the 10th power is 1024.\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  calculator (421e56a4-b5f4-4de4-8feb-0b85e76221ba)\n",
+      " Call ID: 421e56a4-b5f4-4de4-8feb-0b85e76221ba\n",
+      "  Args:\n",
+      "    expression: 2 ** 10\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: calculator\n",
+      "\n",
+      "1024\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Yes, you are correct! 2 raised to the 10th power equals 1024.\n"
      ]
     }
    ],
    "source": [
-    "TOOL_REGISTRY = {\n",
-    "    'tools.calculator': ['multiply', 'add', 'divide'],\n",
-    "    'tools.wikipedia': ['query']\n",
-    "}\n",
-    "\n",
-    "def import_function(module_name, function_name):\n",
-    "    \"\"\"Dynamically imports a function from a module.\n",
-    "\n",
-    "    Args:\n",
-    "        module_name: The name of the module (e.g., \"my_module\").\n",
-    "        function_name: The name of the function to import (e.g., \"my_function\").\n",
-    "\n",
-    "    Returns:\n",
-    "        The imported function, or None if the module or function is not found.\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        module = importlib.import_module(module_name)\n",
-    "        function = getattr(module, function_name)\n",
-    "        return function\n",
-    "    except (ImportError, AttributeError):\n",
-    "        print(f\"Error: Could not import function '{function_name}' from module '{module_name}'.\")\n",
-    "        return None\n",
-    "\n",
-    "tools = [import_function(module, function) for module, functions in TOOL_REGISTRY.items() for function in functions]\n",
-    "print(f\"Tools: {[tool.__name__ for tool in tools]}\")"
+    "for message in results['messages']:\n",
+    "    message.pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tool calls are in AI Messages. That is, an `AIMessage` will have a `.tool_calls` attribute which is a list of tool calls or `None`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'langchain_core.messages.ai.AIMessage'>\n",
+      "[{'args': {'expression': '2 ** 10'},\n",
+      "  'id': '421e56a4-b5f4-4de4-8feb-0b85e76221ba',\n",
+      "  'name': 'calculator',\n",
+      "  'type': 'tool_call'}]\n"
+     ]
+    }
+   ],
    "source": [
-    "llm = ChatOllama(\n",
-    "    model=MODEL, \n",
-    "    temperature=TEMPERATURE,\n",
-    "    # base_url=\"http://host.docker.internal:11434\", # if running in the studio\n",
-    "    ).bind_tools(tools)\n",
-    "\n",
-    "\n",
-    "class State(TypedDict):\n",
-    "    messages: Annotated[list[BaseMessage], add_messages]\n",
-    "    claim: str\n",
-    "    evidence: list[dict]  # {'name': tool name, 'args': {kwargs}, 'result': str}"
+    "from pprint import pprint\n",
+    "print(type(results['messages'][2]))\n",
+    "pprint(results['messages'][2].tool_calls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'calculator', 'args': {'expression': '2 ** 10'}, 'result': '1024'}]\n"
+     ]
+    }
+   ],
    "source": [
-    "from IPython.display import Image, display\n",
-    "\n",
-    "\n",
-    "\n",
-    "with open('prompts/research_agent_system_prompt.txt', 'r') as f:\n",
-    "    sys_msg = SystemMessage(content=f.read())\n",
-    "\n",
-    "def preprocessing(state: State):\n",
-    "    \"\"\"\n",
-    "    Preprocesses state before sending to the assistant for tool routing.\n",
-    "    Currently, this just extracts the claim from the state and sets it as a HumanMessage\n",
-    "    following the SystemMessage\n",
-    "    \"\"\"\n",
-    "    return {\"messages\": HumanMessage(content=state['claim'])}\n",
-    "\n",
-    "def assistant(state: State) -> State:\n",
-    "    response = llm.invoke(state['messages'])\n",
-    "    return {\"messages\": response}\n",
-    "\n",
-    "def postprocessing(state: State) -> State:\n",
-    "    \"\"\"\n",
-    "    Scan the message history to extract tool calls and results into tuples:\n",
-    "    (tool_name, tool_args, tool_result) for the 'evidence' list in the state\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    evidence = []\n",
-    "    for i in range(len(state['messages'])):\n",
-    "        message = state['messages'][i]\n",
-    "        if isinstance(message, AIMessage) and hasattr(message, 'tool_calls'):\n",
-    "            for tool_call in message.tool_calls:\n",
-    "                # Scan later messages for the corresponding ToolMessage\n",
-    "                for j in range(i + 1, len(state['messages'])):\n",
-    "                    next_message = state['messages'][j]\n",
-    "                    if isinstance(next_message, ToolMessage) and next_message.tool_call_id == tool_call['id']:\n",
-    "                        # Found the corresponding ToolMessage\n",
-    "                        evidence.append({\n",
-    "                            'name': tool_call['name'], \n",
-    "                            'args': tool_call['args'], \n",
-    "                            'result': next_message.content})\n",
-    "                        break\n",
-    "\n",
-    "    return {'evidence': evidence}\n",
-    "    # return state\n",
-    "\n",
-    "\n",
-    "# Graph\n",
-    "builder = StateGraph(State)\n",
-    "\n",
-    "# Define nodes: these do the work\n",
-    "builder.add_node(\"preprocessing\", preprocessing)\n",
-    "builder.add_node(\"assistant\", assistant)\n",
-    "builder.add_node(\"tools\", ToolNode(tools))\n",
-    "builder.add_node(\"postprocessing\", postprocessing)\n",
-    "\n",
-    "# Define edges: these determine how the control flow moves\n",
-    "builder.add_edge(START, \"preprocessing\")\n",
-    "builder.add_edge(\"preprocessing\", \"assistant\")\n",
-    "builder.add_conditional_edges(\n",
-    "    source=\"assistant\",\n",
-    "    path=tools_condition,\n",
-    "    path_map={'tools': 'tools', '__end__': 'postprocessing'}\n",
-    ")\n",
-    "builder.add_edge(\"tools\", \"assistant\")\n",
-    "builder.add_edge(\"postprocessing\", END)\n",
-    "\n",
-    "react_graph = builder.compile()\n",
-    "\n",
-    "# Show\n",
-    "# display(Image(react_graph.get_graph(xray=False).draw_mermaid_png()))"
+    "print(results['evidence'])"
    ]
   },
   {
