--- a/tests/evaluation/fever2.ipynb
+++ b/tests/evaluation/fever2.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +94,14 @@
     "        return 'NOT ENOUGH INFO'\n",
     "\n",
     "\n",
-    "async def evaluate_df(df: pd.DataFrame):\n",
+    "async def evaluate_df(df: pd.DataFrame, builtin_tools: list[str]=[], user_tool_kwargs=[]):\n",
     "    agent_responses, predicted_labels, correct_prediction = [], [], []\n",
     "    for i in tqdm(range(len(df))):\n",
     "        row = df.iloc[i]\n",
     "        claim = row['claim']\n",
     "        label = row['label']\n",
     "\n",
-    "        agent_response = await process_query(text=claim, use_builtin_tools=None)\n",
+    "        agent_response = await process_query(text=claim, builtin_tools=builtin_tools, user_tool_kwargs=user_tool_kwargs)\n",
     "        predicted_label = agent_response['final_label']\n",
     "        predicted_fever_label = translate_label(predicted_label)\n",
     "\n",
@@ -122,135 +122,10 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "id                                                           500000\n",
-       "label                                               NOT ENOUGH INFO\n",
-       "claim             There is a convicted statutory rapist called C...\n",
-       "evidence                             [[[269158, None, None, None]]]\n",
-       "original_id                                                225798.0\n",
-       "transformation                                     label_preserving\n",
-       "attack                                            there.is.a.called\n",
-       "annotation                                                      N/A\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Figure out why this example isn't returning valid json in the verdict agent\n",
-    "dataset.iloc[0]\n",
-    "\n",
-    "# Figure out why this example is causing newsagent to hang\n",
-    "# dataset.iloc[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using first search result Chinatown (1974 film)!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:26<00:00, 26.14s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JSON decode error: Expecting value: line 1 column 1 (char 0)\n",
-      "Raw response content: \n",
-      "MESSAGES:\n",
-      "================================\u001b[1m System Message \u001b[0m================================\n",
-      "\n",
-      "You are an expert analyst. The user will give you some text. Your task is to identify and extract all claims made in the text.\n",
-      "\n",
-      "### Instructions: Read the entire document carefully and list each individual factual claim. Each claim should be a complete statement that can be fact-checked.\n",
-      "\n",
-      "- A claim is any statement that can be objectively verified as true or false, regardless of whether it is actually true.\n",
-      "- IGNORE opinions, subjective interpretations, or ambiguous statements.\n",
-      "- IGNORE existential or trivial statements that are nearly always true (e.g. 'some people disagree with the policy')\n",
-      "- Remember to remain objective and avoid inserting any personal interpretation or bias when extracting claims.\n",
-      "\n",
-      "Output Format:\n",
-      "- Return your results as a JSON array of strings.\n",
-      "- Each string in the array must contain one claim.\n",
-      "- Do not include any additional text, explanations, or commentary—only the JSON array.\n",
-      "\n",
-      "{\n",
-      "  \"examples\": [\n",
-      "    {\n",
-      "      \"input\": \"Albert Einstein was born in Germany. He developed the theory of relativity, which revolutionized physics.\",\n",
-      "      \"output\": [\n",
-      "        \"Albert Einstein was born in Germany.\",\n",
-      "        \"Albert Einstein developed the theory of relativity.\",\n",
-      "        \"The theory of relativity revolutionized physics.\"\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"input\": \"Climate change is causing more extreme weather events every year. But of course, some people still insist it's just a natural cycle\",\n",
-      "      \"output\": [\n",
-      "        \"Climate change is causing extreme weather events to increase every year\",\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"input\": \"Windmills emit high frequency signals causing birds to die\",\n",
-      "      \"output\": [\n",
-      "        \"Windmills emit high frequency signals\",\n",
-      "        \"High frequency signals kill birds\"\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"input\": \"Breaking: Ancient bird fossil uncovered, challenging everything we assumed about avian evolution!\",\n",
-      "      \"output\": [\n",
-      "        \"Someone has recently found an ancient bird fossil.\",\n",
-      "        \"The ancient bird fossil has properties that conflict with current beliefs on avian evolution.\"\n",
-      "      ]\n",
-      "    },\n",
-      "    {\n",
-      "      \"input\": \"Wake up! Sources confirm the government's fluoridation program leads to cancer, brain decay, and infertility!\",\n",
-      "      \"output\": [\n",
-      "        \"Public water fluoridation causes cancer, brain decay, and infertility.\",\n",
-      "        \"A trustworthy source has presented evidence that verifies water fluoridation causes cancer, brain decay, and infertility.\"\n",
-      "      ]\n",
-      "    }\n",
-      "  ]\n",
-      "}\n",
-      "\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "\n",
-      "### Claims Analysis\n",
-      "Claim: There is a convicted statutory rapist named Chinatown's writer.\n",
-      "Verdict: false\n",
-      "Justification: There is no convicted statutory rapist named Chinatown's writer. The film 'Chinatown' was written by Robert Towne, not a person named Chinatown's Writer.\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 1/1 [00:11<00:00, 11.02s/it]\n"
      ]
     }
    ],
@@ -265,19 +140,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       id            label                                              claim  \\\n",
+      "0  500000  NOT ENOUGH INFO  There is a convicted statutory rapist called C...   \n",
+      "\n",
+      "                         evidence  original_id    transformation  \\\n",
+      "0  [[[269158, None, None, None]]]     225798.0  label_preserving   \n",
+      "\n",
+      "              attack annotation  \\\n",
+      "0  there.is.a.called        N/A   \n",
+      "\n",
+      "                                      agent_response  predicted_label  \\\n",
+      "0  {'final_label': 'unknown', 'final_justificatio...  NOT ENOUGH INFO   \n",
+      "\n",
+      "   is_correct  label_int  predicted_label_int  \n",
+      "0        True          2                    2  \n",
+      "F1 score: 1.0000\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute F1 score for the 3 labels\n",
-    "\n",
-    "\n",
     "# Convert \"REFUTES\" to 0, \"SUPPORTS\" to 1, and \"NOT ENOUGH INFO\" to 2\n",
     "label_mapping = {'REFUTES': 0, 'SUPPORTS': 1, 'NOT ENOUGH INFO': 2}\n",
     "mini_df['label_int'] = mini_df['label'].map(label_mapping)\n",
     "mini_df['predicted_label_int'] = mini_df['predicted_label'].map(label_mapping)\n",
     "\n",
-    "print(mini_df)\n"
+    "print(mini_df)\n",
+    "f1 = f1_score(mini_df['label_int'],\n",
+    "              mini_df['predicted_label_int'], average='macro')\n",
+    "print(f\"F1 score: {f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def run_evaluation(dataset, builtin_tools, user_tool_kwargs):\n",
+    "    # Evaluate the entire dataset\n",
+    "    df = dataset.copy()\n",
+    "    agent_responses, preds, is_correct_list = await evaluate_df(df, builtin_tools=builtin_tools, user_tool_kwargs=user_tool_kwargs)\n",
+    "    df['agent_response'] = agent_responses\n",
+    "    df['predicted_label'] = preds\n",
+    "    df['is_correct'] = is_correct_list\n",
+    "\n",
+    "    # Compute F1 score for the 3 labels\n",
+    "    # Convert \"REFUTES\" to 0, \"SUPPORTS\" to 1, and \"NOT ENOUGH INFO\" to 2\n",
+    "    label_mapping = {'REFUTES': 0, 'SUPPORTS': 1, 'NOT ENOUGH INFO': 2}\n",
+    "    df['label_int'] = df['label'].map(label_mapping)\n",
+    "    df['predicted_label_int'] = df['predicted_label'].map(label_mapping)\n",
+    "\n",
+    "    f1 = f1_score(dataset['label_int'],\n",
+    "                  dataset['predicted_label_int'], average='macro')\n",
+    "    print(f\"F1 score: {f1:.4f}\")\n",
+    "    return df, f1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:10<00:00, 10.89s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score: 1.0000\n",
+      "       id            label                                              claim  \\\n",
+      "0  500000  NOT ENOUGH INFO  There is a convicted statutory rapist called C...   \n",
+      "\n",
+      "                         evidence  original_id    transformation  \\\n",
+      "0  [[[269158, None, None, None]]]     225798.0  label_preserving   \n",
+      "\n",
+      "              attack annotation  \\\n",
+      "0  there.is.a.called        N/A   \n",
+      "\n",
+      "                                      agent_response  predicted_label  \\\n",
+      "0  {'final_label': 'unknown', 'final_justificatio...  NOT ENOUGH INFO   \n",
+      "\n",
+      "   is_correct  label_int  predicted_label_int  \n",
+      "0        True          2                    2  \n",
+      "1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mini_results, mini_f1 = await run_evaluation(dataset=mini_df, builtin_tools=[], user_tool_kwargs=[])\n",
+    "print(f\"F1: {mini_f1}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mini_f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate dataset using no tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|█▉        | 229/1174 [1:10:41<5:05:54, 19.42s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "no_tools_results, no_tools_f1 = await run_evaluation(dataset=dataset, builtin_tools=[], user_tool_kwargs=[])\n",
+    "print(f\"F1: {no_tools_f1}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate using Wikipedia API"
    ]
   },
   {
@@ -286,8 +307,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1 = f1_score(mini_df['label_int'], mini_df['predicted_label_int'], average='macro')\n",
-    "print(f\"F1 score: {f1:.4f}\")"
+    "wiki_results, wiki_f1 = await run_evaluation(dataset=dataset, builtin_tools=['wikipedia'], user_tool_kwargs=[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate using Web Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "web_results, web_f1 = await run_evaluation(dataset=dataset, builtin_tools=['web_search'], user_tool_kwargs=[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluate using Web & Wikipedia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wiki_web_results, wiki_web_f1 = await run_evaluation(dataset=dataset, builtin_tools=['web_search'], user_tool_kwargs=[])"
    ]
   },
   {
